src/index.css
/* ============= GLOBAL CSS =============== */

*,
::after,
::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 100%;
} /*16px*/

:root {
  /* colors */
  --primary-100: #c5e5fc;
  --primary-200: #a5d5f8;
  --primary-300: #8bcbf9;
  --primary-400: #6ebef7;
  --primary-500: #49a6e9;
  --primary-600: #2d87c8;
  --primary-700: #1a6aa2;
  --primary-800: #104e7a;
  --primary-900: #063251;

  /* grey */
  --grey-50: #f8fafc;
  --grey-100: #f1f5f9;
  --grey-200: #e2e8f0;
  --grey-300: #cbd5e1;
  --grey-400: #94a3b8;
  --grey-500: #64748b;
  --grey-600: #475569;
  --grey-700: #334155;
  --grey-800: #1e293b;
  --grey-900: #0f172a;
  /* rest of the colors */
  --black: #222;
  --white: #fff;
  --red-light: #f8d7da;
  --red-dark: #842029;
  --green-light: #d1e7dd;
  --green-dark: #0f5132;

  --small-text: 0.875rem;
  --extra-small-text: 0.7em;
  /* rest of the vars */
  --backgroundColor: var(--grey-50);
  --textColor: var(--grey-900);
  --borderRadius: 0.25rem;
  --letterSpacing: 1px;
  --transition: 0.3s ease-in-out all;
  --max-width: 1120px;
  --fixed-width: 600px;

  /* box shadow*/
  --shadow-1: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
  --shadow-2: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
    0 2px 4px -1px rgba(0, 0, 0, 0.06);
  --shadow-3: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
    0 4px 6px -2px rgba(0, 0, 0, 0.05);
  --shadow-4: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
    0 10px 10px -5px rgba(0, 0, 0, 0.04);
}

body {
  background: var(--backgroundColor);
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  font-weight: 400;
  line-height: 1;
  color: var(--textColor);
}
p {
  margin: 0;
}
h1,
h2,
h3,
h4,
h5 {
  margin: 0;
  font-family: var(--headingFont);
  font-weight: 400;
  line-height: 1;
  text-transform: capitalize;
  letter-spacing: var(--letterSpacing);
}

h1 {
  font-size: 3.052rem;
}

h2 {
  font-size: 2.441rem;
}

h3 {
  font-size: 1.953rem;
}

h4 {
  font-size: 1.563rem;
}

h5 {
  font-size: 1.25rem;
}

.text {
  margin-bottom: 1.5rem;
  max-width: 40em;
}

small,
.text-small {
  font-size: var(--small-text);
}

a {
  text-decoration: none;
}
ul {
  list-style-type: none;
  padding: 0;
}

.img {
  width: 100%;
  display: block;
  object-fit: cover;
}
/* buttons */

.btn {
  cursor: pointer;
  color: var(--white);
  background: var(--primary-500);
  border: transparent;
  border-radius: var(--borderRadius);
  letter-spacing: var(--letterSpacing);
  padding: 0.375rem 0.75rem;
  box-shadow: var(--shadow-1);
  transition: var(--transition);
  text-transform: capitalize;
  display: inline-block;
}
.btn:hover {
  background: var(--primary-700);
  box-shadow: var(--shadow-3);
}
.btn-hipster {
  color: var(--primary-500);
  background: var(--primary-200);
}
.btn-hipster:hover {
  color: var(--primary-200);
  background: var(--primary-700);
}
.btn-block {
  width: 100%;
}

/* alerts */
.alert {
  padding: 0.375rem 0.75rem;
  margin-bottom: 1rem;
  border-color: transparent;
  border-radius: var(--borderRadius);
}

.alert-danger {
  color: var(--red-dark);
  background: var(--red-light);
}
.alert-success {
  color: var(--green-dark);
  background: var(--green-light);
}
/* form */

.form {
  width: 90vw;
  max-width: var(--fixed-width);
  background: var(--white);
  border-radius: var(--borderRadius);
  box-shadow: var(--shadow-2);
  padding: 2rem 2.5rem;
  margin: 3rem auto;
}
.form-label {
  display: block;
  font-size: var(--small-text);
  margin-bottom: 0.5rem;
  text-transform: capitalize;
  letter-spacing: var(--letterSpacing);
}
.form-input,
.form-textarea {
  width: 100%;
  padding: 0.375rem 0.75rem;
  border-radius: var(--borderRadius);
  background: var(--backgroundColor);
  border: 1px solid var(--grey-200);
}

.form-row {
  margin-bottom: 1rem;
}

.form-textarea {
  height: 7rem;
}
::placeholder {
  font-family: inherit;
  color: var(--grey-400);
}
.form-alert {
  color: var(--red-dark);
  letter-spacing: var(--letterSpacing);
  text-transform: capitalize;
}
/* alert */

@keyframes spinner {
  to {
    transform: rotate(360deg);
  }
}

.loading {
  width: 6rem;
  height: 6rem;
  border: 5px solid var(--grey-400);
  border-radius: 50%;
  border-top-color: var(--primary-500);
  animation: spinner 0.6s linear infinite;
  margin: 0 auto;
}

/* title */

.title {
  text-align: center;
}

.title-underline {
  background: var(--primary-500);
  width: 7rem;
  height: 0.25rem;
  margin: 0 auto;
  margin-top: 1rem;
}

/*=============== Project CSS===============*/

main {
  min-height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  background: var(--grey-100);
}
.sidebar-toggle {
  position: fixed;
  top: 2rem;
  left: 3rem;
  font-size: 2rem;
  background: transparent;
  border-color: transparent;
  color: var(--primary-500);
  cursor: pointer;
  animation: bounce 2s ease-in-out infinite;
}
@keyframes bounce {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.5);
  }
  100% {
    transform: scale(1);
  }
}
/*
=============== 
      Modal 
===============
*/
.modal-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5);
  display: grid;
  place-items: center;
  z-index: -1;
  visibility: hidden;
  opacity: 0;
}

.show-modal {
  opacity: 1;
  visibility: visible;
  z-index: 1;
  transition-property: opacity;
  transition-duration: 2s;
}

.modal-container {
  background: var(--white);
  width: 90vw;
  height: 55vh;
  max-height: 90vh;
  border-radius: var(--borderRadius);
  max-width: 900px;
  display: grid;
  place-items: center;
  position: relative;
  overflow-y: auto;
  padding: 2rem 1rem;
}
.close-modal-btn {
  position: absolute;
  top: 1rem;
  right: 1rem;
  font-size: 2rem;
  background: transparent;
  border-color: transparent;
  cursor: pointer;
  color: var(--red-dark);
}

/*
=============== 
    Sidebar
===============
*/

.side-bar {
  position: fixed;
  top: 0;
  left: 0rem;
  width: 100%;
  height: 100%;
  background: var(--white);
  display: grid;
  grid-template-rows: auto 1fr auto;
  row-gap: 1rem;
  box-shadow: var(--red-dark);
  transition: var(--transition);
  transform: translateX(-100%);
}

.show-sidebar {
  transform: translateX(0);
}

@media screen and (min-width: 676px) {
  .side-bar {
    width: 400px;
  }
}

.sidebar-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem 1.5rem;
}

.title {
  display: flex;
  align-items: baseline;
}

.title h5 {
  padding-left: 0.5rem;
  color: var(--primary-500);
  font-weight: 400;
}
.title h4 {
  font-weight: 400;
}
.title h4,
.title h5 {
  font-size: 1.625rem;
  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
}
.close-btn {
  font-size: 1.75rem;
  background: transparent;
  border-color: transparent;
  cursor: pointer;
  color: var(--red-dark);
}
.links a {
  display: flex;
  align-items: center;
  font-size: 1.25rem;
  text-transform: capitalize;
  padding: 1rem 1.5rem;
  color: var(--grey-700);
  transition: var(--transition);
  letter-spacing: var(--letterSpacing);
}
.links a:hover {
  background: var(--grey-100);
  color: var(--grey-800);
}
.links a svg {
  font-size: 1.5rem;
  color: var(--grey-500);
  margin-right: 1rem;
  transition: var(--transition);
}
.links a svg :hover {
  color: var(--grey-600);
}
.social-links {
  display: flex;
  justify-self: center;
  padding-bottom: 2rem;
}
.social-links a {
  font-size: 1.5rem;
  margin: 0 0.5rem;
  color: var(--primary-500);
  transition: var(--transition);
}
.social-links a :hover {
  color: var(--primary-800);
}

/* ============= Slick Slider =============== */

.slick-container {
  margin: 0rem auto;
  width: 75vw;
  max-width: 800px;
  text-align: center;
}

.person-img {
  width: 150px;
  height: 150px;
  border-radius: 50%;
  margin-bottom: 1rem;
  object-fit: cover;
  border: 0.25rem solid var(--grey-200);
  box-shadow: var(--shadow-3);
}
.name {
  font-size: 1.25rem;
  font-weight: 400;
  letter-spacing: 1px;
  color: var(--primary-500);
  text-transform: uppercase;
  margin-bottom: 0.75rem;
}
.slider-title {
  font-size: 1rem;
  font-weight: 400;
  text-transform: capitalize;
  color: var(--grey-700);
  margin-bottom: 2rem;
}
.text {
  max-width: 35em;
  margin: 0 auto;
  margin-top: 2rem;
  font-weight: 400;
  font-size: 1rem;
  line-height: 2rem;
  color: var(--grey-500);
}
.icon {
  font-size: 3rem;
  margin-top: 1rem;
  color: var(--grey-500);
}
.slick-slide img {
  display: inline !important;
}
.slick-prev::before {
  color: var(--primary-500) !important;
}
.slick-next::before {
  color: var(--primary-500) !important;
}
@media screen and (max-width: 768px) {
  .slick-container {
    width: 90vw;
    padding: 0 1rem;
  }

  .person-img {
    width: 100px;
    height: 100px;
  }

  .modal-container {
    width: 95vw;
    margin: 1rem;
  }
}

